--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .Footer{
-        background-color: #20242C;
+        background-color: #111111;
         color:#00D4AD;
         font-size: 1.5em;
         font-weight: bold;
