--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,8 +77,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
 html,
 body {
   max-width: 100vw;
