--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -45,54 +45,11 @@
         height: 100%;
         background: #151415;
 }
-header{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        z-index: 1000;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 30px 100px;
-}
-header .logo{
-        font-size: 2em;
-        color: #fff;
-        font-weight: 700;
-        text-decoration: none;
-        transition: 0.5s;
-        transform-origin: right;
-}
+
 .banner.active .logo{
         transform: scale(0);
         transform-origin:left;
 }
-.toggle{
-        position: relative;
-        width: 30px;
-        height: 30px;
-        background: url(/img/menu.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 30px;
-        cursor: pointer;
-        border: 1px solid white;
-        border-radius: 50%;
-        padding: 25px 26px;
-        background-color: white;
-}
-.toggle.active{
-        background: url(/img/close.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 25px;
-        border: 1px solid white;
-        border-radius: 50%;
-        padding: 25px 26px;
-        background-color: white;
-}
-
 .content{
         position: relative;
         z-index: 2;
@@ -103,6 +60,24 @@ header .logo{
         transition: 0.5s;
         transform-origin: right;
 }
+.filmBx{
+        position: relative;
+        width: 100%;
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+}
+.filmBx video{
+        position: fixed;
+        top: 0;
+        right:0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+}
+
 .banner.active .content{
         transform: scale(0);
         transform-origin:left;
