--- a/src/styles/download.css
+++ b/src/styles/download.css
@@ -50,7 +50,7 @@
         height: 100%;
 }
 header{
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
