--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -83,17 +83,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background:#111111;
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 a {
   color: inherit;
