--- a/src/styles/download.css
+++ b/src/styles/download.css
@@ -206,28 +206,21 @@ header .logo{
 }
 
 .video img{
-        position: fixed;
-        width: 100%;
-        height: 55%;
-        object-fit:cover;
 }
 .video .sphere{
-        position: relative;
-        width: 650px;
-        height: 400px;
+        position: absolute;
+        width: 400px;
+        height: 300px;
         border-radius: 0%;
         z-index: 10;
-}
-.video .sphere::before{
-
 }
 .video .sphere::after{
         content: '';
         position: absolute;
         bottom: -50px;
         left: -50px;
-        width: 750px;
-        height: 100px;
+        width: 500px;
+        height: 80px;
         border-radius: 50%;
         background: radial-gradient(white,transparent,transparent);
         z-index: -1;
@@ -246,6 +239,10 @@ header .logo{
         margin-top: 52px;
         background-color: #20242C;
         color: #08FFFF;
+}
+.Main-Download{
+        direction: rtl;
+        cursor: pointer;
 }
 .part1{
         display: flex;
@@ -284,7 +281,7 @@ header .logo{
 .IMDB-part span:hover{
         color: white;
         transition: 0.6s;
-}#907B77
+}
 .country-part i{
         font-size: 1.2em;
 }
@@ -356,7 +353,8 @@ header .logo{
 .part4{
         padding: 10px 18px;
 }
-.link span{
+.link{
+        direction: rtl;
         color: white;
 }
 .user-info{
