--- a/src/styles/download.css
+++ b/src/styles/download.css
@@ -358,9 +358,9 @@ header .logo{
         color: white;
 }
 .user-info{
-        background-color: #282C33;
-        color: #04EEC8;
-        height: 100%;
+        background: #3598DB;
+        color: white;
+        height: auto;
         padding: 20px 10px;
         width: 100%;
 }
@@ -368,11 +368,15 @@ header .logo{
         display: flex;
         justify-content: space-between;
 }
-.details{
+.DownloadDetails{
+        display: flex;
+        justify-content: space-between;
+        padding: 5px 10px;
+}
+.DownloadDetailsOff{
         display: none;
         padding: 5px 10px;
         text-align: center;
-
 }
 .main-link{
         display: flex;
@@ -418,7 +422,7 @@ header .logo{
         font-weight: bold;
 }
 .buttom-link{
-        margin: 15px 0px;
+        margin: 0px 0px;
 }
 
 
