--- a/src/styles/Trailer.css
+++ b/src/styles/Trailer.css
@@ -1,4 +1,4 @@
-.trailer{
+/* .trailer{
         position: fixed;
         top: 50%;
         left: 50%;
@@ -21,7 +21,7 @@
         position: relative;
         max-width: 900px;
         outline: none;
-}
+} */
 .close{
         position: absolute;
         top: 30px;
