--- a/src/styles/Trailer.css
+++ b/src/styles/Trailer.css
@@ -1,4 +1,49 @@
-/* .trailer{
+.FullPartBannerTrailer{
+        background: #000;
+        width: 100%;
+        height: 100%;
+}
+.PartBannerTrailer{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content:space-around;
+}
+.PartBannerTrailer .BannerTrailer{
+        width: 30%;
+        height: 100%;
+        padding: 1%;
+        border: 2px solid #00D4AD;
+}
+.PartBannerTrailer .BannerTrailer img{
+        width: 100%;
+        height: 100%;
+        margin-bottom: 15px;
+}
+.PartBannerTrailer .BannerTrailer h2{
+        color: #fff;
+        font-weight: 500;
+        font-size: 1.2em;
+        text-align: center;
+}
+.PartBannerTrailer .BannerTrailer p{
+        font-size: 1.1em;
+        color: #00D4AD;
+        font-weight: 300;
+        margin: 15px 0 25px;
+}
+.PartBannerTrailer .BannerTrailer a{
+        position: relative;
+        text-transform: uppercase;
+        background: #fff;
+        color: #111;
+        font-weight: 500;
+        letter-spacing: 2px;
+        text-decoration: none;
+        display: inline-block;
+        padding: 10px 15px;
+}
+
+.trailer{
         position: fixed;
         top: 50%;
         left: 50%;
@@ -17,11 +62,14 @@
         visibility: visible;
         opacity: 1;
 }
+.trailer.active img{
+        height: 5%;
+}
 .trailer video{
         position: relative;
         max-width: 900px;
         outline: none;
-} */
+}
 .close{
         position: absolute;
         top: 30px;
@@ -34,5 +82,44 @@
 {
         .trailer video{
         max-width: 90%;
+        }
+}
+@media screen and (max-width: 1350px){
+        .PartBannerTrailer .BannerTrailer h2{
+                font-size: 1.1em;
+        }
+        .PartBannerTrailer .BannerTrailer p{
+                font-size: 1em;
+        }
+}
+@media screen and (max-width: 1200px){
+        .PartBannerTrailer .BannerTrailer{
+                width: 47%;
+        }
+}
+@media screen and (max-width: 850px){
+        .PartBannerTrailer .BannerTrailer h2{
+                font-size: 1em;
+        }
+        .PartBannerTrailer .BannerTrailer p{
+                font-size: 0.8em;
+        }
+}
+@media screen and (max-width: 670px){
+        .PartBannerTrailer .BannerTrailer{
+                width: 90%;
+        }
+}
+@media screen and (max-width: 350px){
+        .PartBannerTrailer .BannerTrailer h2{
+                font-size: 0.8em;
+        }
+        .PartBannerTrailer .BannerTrailer p{
+                font-size: 0.6em;
+        }
+        .PartBannerTrailer .BannerTrailer a{
+                font-weight: 100;
+                letter-spacing: 2px;
+                padding: 5px 10px;
         }
 }
