--- a/src/styles/Netflex.css
+++ b/src/styles/Netflex.css
@@ -17,12 +17,13 @@
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
-        height: 400px;
+        height: 100%;
+        width: 100%;
         transition: 0.5s;
 }
 .card:hover img{
         left: 80%;
-        height: 500px;
+        height: 400px;
 }
 .card .card-content{
         position: relative;
@@ -40,7 +41,7 @@
 .card:hover .card-content{
         opacity: 1;
         visibility: visible;
-        right: 20%;
+        right: 25%;
         text-align: center;
         padding: 10px 0px;
 }
@@ -81,65 +82,6 @@
 
 /* part 2 end */
 /* main end */
-
-@media (max-width:991px)
-{
-        header{
-        padding: 20px 40px;
-        }
-        .banner{
-        padding: 40px;
-        overflow: hidden;
-        }
-        .banner::before{
-        top: 100px;
-        left: 0;
-        width: 170px;
-        height: 310px;
-        }
-        .banner::after{
-        bottom: 0;
-        right: 0;
-        width: 80px;
-        height: 60px;
-        }
-        .content{
-        flex-direction: column-reverse;
-        margin: 50px 0;
-        }
-        .content .contentBx{
-        max-width: 100%;
-        }
-        .content .imgBx img{
-        max-width: 100%;
-        min-width: 300px;
-        }
-        .content .contentBx h2{
-        font-size: 2.5em;
-        line-height: 1em;
-        color: #fff;
-        text-transform: uppercase;
-        }
-        .card{
-        position: relative;
-        width: auto;
-        max-width: 600px;
-        transition: 0.5s;
-        align-items: flex-start;
-        }
-        .card:hover{
-        height: 600px;
-        }
-        .card:hover img{
-        left: 50%;
-        height: 350px;
-        }
-        .card .content{
-        width: 100%;
-        left: 0;
-        padding: 40px;
-        }
-}
 @media (max-width:420px){
         .card .content{
         padding: 30px;
@@ -149,61 +91,81 @@
         }
 }
 
-@media screen and (min-width: 60px) and (max-width: 1245px){
-
-}
-@media screen and (min-width: 60px) and (max-width: 1154px){
-        .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin: 20px;
+@media screen and (max-width: 1400px){
+        .card img{
+                height: 90%;
+                width: 90%;
+        }
+        .card:hover img{
+                left: 80%;
+                height: 350px;
+        }
+        .card .card-content h2{
+                font-size: 1.8em;
+                line-height: 2em;
+        }
+        .card .card-content p{
+                color: #fff;
+                font-size: 0.9em;
         }
 }
-@media screen and (min-width: 60px) and (max-width: 992px){
+@media screen and (max-width: 1154px){
         .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin-left: 25%;
+                width: 40%;
+                height: auto;
+                margin: 1% 1%;
+        }
+        .card img{
+                height: 80%;
+        }
+        .card:hover img{
+                left: 75%;
+                height: 350px;
         }
 }
-@media screen and (min-width: 60px) and (max-width: 657px){
+@media screen and (max-width: 860px){
         .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin-left: 12.5%;
+                width: 90%;
+                height: auto;
+                margin: 2% 5%;
+        }
+        .card img{
+                height: 90%;
+                width: 90%;
+        }
+        .card:hover img{
+                left: 80%;
+                height: 350px;
         }
 }
-@media screen and (min-width: 60px) and (max-width: 561px){
-        .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin-left: 6.25%;
+@media screen and (max-width: 480px){
+        .card img{
+                height: 85%;
+                width: 85%;
+        }
+        .card:hover img{
+                left: 80%;
+                height: 280px;
+        }
+        .card .card-content h2{
+                font-size: 1.5em;
+                line-height: 1.3em;
+        }
+        .card .card-content p{
+                color: #fff;
+                font-size: 0.6em;
+        }
+        .card .card-content a{
+                padding: 7px 15px;
         }
 }
-@media screen and (min-width: 60px) and (max-width: 561px){
-        .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin-left: 6.25%;
+@media screen and (max-width: 350px){
+        .card img{
+                height: 70%;
+                width: 90%;
         }
-}
-@media screen and (min-width: 60px) and (max-width: 519px){
-        .card{
-        position: relative;
-        width: 500px;
-        height: 400px;
-        margin-left: 3.10%;
-        }
-}
-@media screen and (min-width: 60px) and (max-width: 350px){
-        .card{
-        position: relative;
-        width: 600px;
-        height: 700px;
+        .card:hover img{
+                left: 80%;
+                height: 250px;
         }
 }
