--- a/public/css/downlod.css
+++ b/public/css/downlod.css
@@ -220,7 +220,7 @@ header .logo{
 .IMDB-part span:hover{
     color: white;
     transition: 0.6s;
-}#907B77
+}
 .country-part i{
     font-size: 1.2em;
 }
